# multimodal-equity-research

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
docs/: architecture.md  backtest-validation-howto.md  backtest-validation-interpretation.md  backtest-validation-overview.md  beginner-decision-coach-implementation-checklist.md  data-sources.md  data-timestamp-schema.md  final-action-label-inventory.md  git-workflow.md  live-order-placement-audit.md  modeling.md  plan-implementation-coverage.md  quant-validity-interview-prep.md  risk-validation.md  semantic-safety-evidence-manifest.json  semantic-safety-taxonomies.json  validity-gate-roadmap.md
scripts/: convert_fingpt_to_mlx.py  download_backtest_data.py  fingpt_mlx_worker.py  preload_local_models.py  run_backtest_validation.py  run_heavy_quant_validation.py
tests/: TESTS_GUIDE.md  conftest.py  test_ablation_metric_comparability.py  test_ablation_scenarios.py  test_app_regression_001.py  test_app_smoke.py  test_architecture_guards.py  test_artifact_manifest_builder.py  test_backtest_alignment.py  test_backtest_risk.py  test_backtest_turnover.py  test_beginner_dashboard.py  test_benchmark_inputs.py  test_comparison_schemas.py  test_covariance_inputs.py  test_data_providers.py  test_deterministic_gate_interface.py  test_evaluation_intervals.py  test_feature_leakage_guards.py  test_gate_status_policy.py  test_heavy_quant_validation_runner.py  test_model_adapters.py  test_model_config_registry.py  test_no_model_proxy_ablation.py  test_pipeline.py  test_policy_language_guardrails.py  test_portfolio_risk_metrics.py  test_preload_local_models.py  test_price_features.py  test_provider_timestamp_normalization.py  test_report_generation.py  test_report_only_execution_isolation.py  test_report_schema.py  test_return_series_metrics.py  test_runtime.py  test_sec_features.py  test_semantic_safety_evidence_manifest.py  test_signal_engine.py  (+21 more)
(+60 files in other folders)
