[project]
name = "quant-research"
version = "0.1.0"
description = "Local multimodal US equity quantitative research and backtesting app"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "mlx-lm>=0.29.1",
  "numpy>=2.0",
  "pandas>=2.2",
  "plotly>=5.24",
  "pydantic>=2.8",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "streamlit>=1.40",
  "yfinance>=0.2.50",
]

[project.optional-dependencies]
boosting = [
  "catboost>=1.2",
  "lightgbm>=4.5",
  "xgboost>=2.1",
]
nlp = [
  "torch>=2.5",
  "transformers>=4.46",
]
timeseries = [
  "chronos-forecasting>=2.0",
  "huggingface-hub>=0.26",
  "sktime>=0.35",
]
llm = [
  "accelerate>=1.1",
  "huggingface-hub>=0.26",
  "peft>=0.13",
  "sentencepiece>=0.2",
  "torch>=2.5",
  "transformers>=4.46",
]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]
all = [
  "accelerate>=1.1",
  "catboost>=1.2",
  "chronos-forecasting>=2.0",
  "huggingface-hub>=0.26",
  "lightgbm>=4.5",
  "peft>=0.13",
  "pytest>=8.3",
  "ruff>=0.8",
  "sentencepiece>=0.2",
  "sktime>=0.35",
  "torch>=2.5",
  "transformers>=4.46",
  "xgboost>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: fast deterministic unit tests",
  "integration: local fixture integration tests",
  "regression: golden fixture regression tests",
  "smoke: quick sanity tests for core paths",
  "slow: slow tests excluded from default CI",
  "network: tests requiring internet access",
  "llm: local heavy model tests",
  "manual: manually triggered tests excluded from default CI",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
